Changed the path to a professional path